--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -23,8 +23,11 @@ email = order_test@level.travel
 phone = 0000000000
 
 [Tourist1]
-birthday label-center input-center birthday = 01.01.1991
+birthday label-center input-center birthday = 01011991
 surname = demo
+name = demo
+doc-number label-center input-center passport_number = 000000000
+doc-date label-center input-center passport_expires_on = 01012020
 
 
 [Xpath_buttton]
@@ -32,6 +35,8 @@ tour_1 = //*[@id='search_results']/article[1]//a
 look_cost = //*[text()='Посмотреть цены']
 package_1 = //*[@class='lt-hotel-results-main-content']//ul//li[1]
 thankyou = //button[text()='Спасибо!']
+contract = //*[text()='Я согласен с условиями ']/input
+book_tour = //button[text()='Забронировать']
 
 [Xpath_field]
 pattern_form = //*[@id='{}']//li[@class='{}']//input
