--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -1,25 +1,25 @@
 [Url]
 base_url = https://level.travel
 s_url = search
+pattern_search = {}/{}/{}-to-{}-departure-{}-for-{}-nights-{}-adults-{}-kids-1..5-stars
 
 [Search_data]
-country = Россия
-nights = 3
-adult = 3
-departure_city = Москва
+search-form-field main-field search-form-destination = Париж
+
 
 [Search_data_lite]
+departure_city = Moscow-RU
 country = Any-FR
 date_depart = 19.07.2017
 nights = 3
 adult = 2
 kids = 0
-departure_city = Moscow-RU
+
 
 [Buyer]
 surname = Демо
 name = Демо
-email = order_test@level.travel
+email = ako@level.travel
 phone = 0000000000
 
 [Tourist1]
