--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -15,7 +15,6 @@ nights = 3
 adult = 2
 kids = 0
 
-
 [Buyer]
 surname = Демо
 name = Демо
@@ -40,6 +39,7 @@ book_tour = //button[text()='Забронировать']
 
 [Xpath_field]
 pattern_form = //*[@id='{}']//li[@class='{}']//input
+pattern_cigarette = //*[@id='lt-search-widget']//div[@tabindex='{}']//{}
 
 [Xpath_search]
 get_results = //*[@id='search_results']
