--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -4,7 +4,10 @@ s_url = search
 pattern_search = {}/{}/{}-to-{}-departure-{}-for-{}-nights-{}-adults-{}-kids-1..5-stars
 
 [Search_data]
-search-form-field main-field search-form-destination = Париж
+country = Париж
+date_depart = 19.07.2017
+nights = 3
+adult = 2
 
 
 [Search_data_lite]
@@ -18,7 +21,7 @@ kids = 0
 [Buyer]
 surname = Демо
 name = Демо
-email = ako@level.travel
+email = order_test@level.travel
 phone = 0000000000
 
 [Tourist1]
@@ -36,6 +39,7 @@ package_1 = //*[@class='lt-hotel-results-main-content']//ul//li[1]
 thankyou = //button[text()='Спасибо!']
 contract = //*[text()='Я согласен с условиями ']/input
 book_tour = //button[text()='Забронировать']
+search = //*[text()='Найти']/../button
 
 [Xpath_field]
 pattern_form = //*[@id='{}']//li[@class='{}']//input
