--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -9,6 +9,8 @@ date_depart = 19.07.2017
 nights = 3
 adult = 2
 
+[S]
+country = Париж
 
 
 [Search_data_lite]
@@ -45,6 +47,7 @@ search = //*[text()='Найти']/../button
 [Xpath_field]
 pattern_form = //*[@id='{}']//li[@class='{}']//input
 pattern_cigarette = //*[@id='lt-search-widget']//div[@tabindex='{}']//{}
+pattern_search_form = //*[@class='search-form-content']/div[@tabindex='{}']/input
 
 [Xpath_search]
 get_results = //*[@id='search_results']
