--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -11,7 +11,7 @@ adult = 2
 
 [S]
 country = Париж
-
+date_depart = 12.08
 
 [Search_data_lite]
 departure_city = Moscow-RU
@@ -42,12 +42,12 @@ package_1 = //*[@class='lt-hotel-results-main-content']//ul//li[1]
 thankyou = //button[text()='Спасибо!']
 contract = //*[text()='Я согласен с условиями ']/input
 book_tour = //button[text()='Забронировать']
-search = //*[text()='Найти']/../button
+search = //span[text()='Найти']/..
 
 [Xpath_field]
 pattern_form = //*[@id='{}']//li[@class='{}']//input
 pattern_cigarette = //*[@id='lt-search-widget']//div[@tabindex='{}']//{}
-pattern_search_form = //*[@class='search-form-content']/div[@tabindex='{}']/input
+pattern_search_form = //*[@class='search-form-content']/div[@tabindex='{}']{}
 
 [Xpath_search]
 get_results = //*[@id='search_results']
