--- a/_configs/text.ini
+++ b/_configs/text.ini
@@ -13,6 +13,8 @@ adult = 2
 country = Париж
 date_depart = 12.08
 nights = 3
+adult = 3
+departure = Екатеринбург
 
 [Search_data_lite]
 departure_city = Moscow-RU
